--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <div data-role="page" id="pageone">
   <div data-role="header">
   <table width="100%" style="background:#3366CC">
-  <tr><td width="20%"><img src="../bharti_logo.png" width="134" height="119" /></td><td style="color:#FFFFFF"><h1 align="center">BHARTI FOUNDATION </h1></td></tr>
+  <tr><td width="20%"><img src="bharti_logo.jpg" width="134" height="119" /></td><td style="color:#FFFFFF"><h1 align="center">BHARTI FOUNDATION </h1></td></tr>
   </table>
 </div>
 <div data-role="main" class="ui-content">  
