--- a/login.html
+++ b/login.html
@@ -94,60 +94,7 @@ form fieldset a:hover { text-decoration: underline; }
  width: 50px;
 }
 
-.facebook-before {
- background-color: #0064ab;
- border-radius: 3px 0px 0px 3px;
- -moz-border-radius: 3px 0px 0px 3px;
- -webkit-border-radius: 3px 0px 0px 3px;
- color: #f4f4f4;
- display: block;
- float: left;
- height: 50px;
- line-height: 50px;
- text-align: center;
- width: 50px;
-}
 
-.facebook {
- background-color: #0079ce;
- border: none;
- border-radius: 0px 3px 3px 0px;
- -moz-border-radius: 0px 3px 3px 0px;
- -webkit-border-radius: 0px 3px 3px 0px;
- color: #f4f4f4;
- cursor: pointer;
- height: 50px;
- text-transform: uppercase;
- width: 250px;
-}
-
-.twitter-before {
- background-color: #189bcb;
- border-radius: 3px 0px 0px 3px;
- -moz-border-radius: 3px 0px 0px 3px;
- -webkit-border-radius: 3px 0px 0px 3px;
- color: #f4f4f4;
- display: block;
- float: left;
- height: 50px;
- line-height: 50px;
- text-align: center;
- width: 50px;
-}
-
-
-.twitter {
- background-color: #1bb2e9;
- border: none;
- border-radius: 0px 3px 3px 0px;
- -moz-border-radius: 0px 3px 3px 0px;
- -webkit-border-radius: 0px 3px 3px 0px;
- color: #f4f4f4;
- cursor: pointer;
- height: 50px;
- text-transform: uppercase;
- width: 250px;
-}
 </style>
 
  
@@ -160,15 +107,14 @@ form fieldset a:hover { text-decoration: underline; }
 
   <h1><strong>Welcome.</strong> Please login.</h1>
 
-  <form action="javascript:void(0);" method="get">
+  <form id="login_form"  method="get">
 
    <fieldset>
-
-    <p><input type="text" required value="Username" onBlur="if(this.value=='')this.value='Username'" onFocus="if(this.value=='Username')this.value='' "></p> <!-- JS because of IE support; better: placeholder="Username" -->
-
+   <p><u><b>Enter Username:<b></u></p>
+	<p><input type="text" required value="Username" onBlur="if(this.value=='')this.value='Username'" onFocus="if(this.value=='Username')this.value='' "></p> <!-- JS because of IE support; better: placeholder="Username" -->
+	<br><br>
+	<p><u>Enter Password:<u></p>
     <p><input type="password" required value="Password" onBlur="if(this.value=='')this.value='Password'" onFocus="if(this.value=='Password')this.value='' "></p> <!-- JS because of IE support; better: placeholder="Password" -->
-
-    <p><a href="#">Forgot Password?</a></p>
 
     <p><input type="submit" value="Login"></p>
 
@@ -176,22 +122,7 @@ form fieldset a:hover { text-decoration: underline; }
 
   </form>
 
-  <p><span class="btn-round">or</span></p>
-
-  <p>
-
-   <a class="facebook-before"><span class="fontawesome-facebook"></span></a>
-   <button class="facebook">Login Using Facbook</button>
-
-  </p>
-
-  <p>
-
-   <a class="twitter-before"><span class="fontawesome-twitter"></span></a>
-   <button class="twitter">Login Using Twitter</button>
-
-  </p>
-
+ 
  </div> <!-- end login -->
 
 </body> 
