--- a/login.html
+++ b/login.html
@@ -110,7 +110,7 @@ form fieldset a:hover { text-decoration: underline; }
 
   <h1><strong>Welcome.</strong> Please login.</h1>
 
-  <form id="login_form" >
+  <form method=POST >
 
    <fieldset>
    <p><u><b>Enter Username:<b></u></p>
