--- a/login.html
+++ b/login.html
@@ -7,7 +7,8 @@
  <title>LOGIN</title>
  <script type="text/javascript" charset="utf-8" src="1.js"></script>
  <script type="text/javascript" charset="utf-8" src="jquery-1.9.1.min.js"></script>
-<style type="text/css">
+
+<style type="text/css" >
 @charset "utf-8";
 /* CSS Document */
 
@@ -42,7 +43,7 @@ strong {
  width: 300px;
 }
 
-form fieldset input[type="text"], input[type="password"] {
+ form  input[type="text"], input[type="password"] {
  background-color: #e5e5e5;
  border: none;
  border-radius: 3px;
@@ -58,7 +59,7 @@ form fieldset input[type="text"], input[type="password"] {
  -webkit-appearance:none;
 }
 
-form fieldset input[type="submit"] {
+ form input[type="submit"] {
  background-color: #008dde;
  border: none;
  border-radius: 3px;
@@ -73,12 +74,12 @@ form fieldset input[type="submit"] {
  -webkit-appearance:none;
 }
 
-form fieldset a {
+form  a {
  color: #5a5656;
  font-size: 10px;
 }
 
-form fieldset a:hover { text-decoration: underline; }
+form a:hover { text-decoration: underline; }
 
 .btn-round {
  background-color: #5a5656;
@@ -99,7 +100,6 @@ form fieldset a:hover { text-decoration: underline; }
 
 </style>
 
-
  
 </head>
 
@@ -107,23 +107,18 @@ form fieldset a:hover { text-decoration: underline; }
 <body>
 
  <div id="login">
-
+<script>alert('Yo');</script>
   <h1><strong>Welcome.</strong> Please login.</h1>
 
-  <form method=POST >
 
-   <fieldset>
+   
+   <form method=POST action="login_php.php">
    <p><u><b>Enter Username:<b></u></p>
-	<p><input type="text" required id="Username" onBlur="if(this.value=='')this.value='Username'" onFocus="if(this.value=='Username')this.value='' "></p> <!-- JS because of IE support; better: placeholder="Username" -->
-	<br><br>
-	<p><u>Enter Password:<u></p>
-    <p><input type="password" required id="Password" onBlur="if(this.value=='')this.value='Password'" onFocus="if(this.value=='Password')this.value='' "></p> <!-- JS because of IE support; better: placeholder="Password" -->
-
-    <p><input type="submit" value="Login" onclick="login_submit()"></p>
-
-   </fieldset>
-
-  </form>
+	<p><input type="text" name="username"></p>
+	<p><u><b>Enter Password:<b></u></p>
+	<p><input type="text" name="password"></p>
+	<input type="submit" value="login">
+</form>
 
  
  </div> <!-- end login -->
