--- a/home2.html
+++ b/home2.html
@@ -29,7 +29,7 @@ font-family:Verdana, Arial, Helvetica, sans-serif;
 <div data-role="page" id="pageone">
   <div data-role="header">
   <table width="100%" style="background:#3366CC">
-  <tr><td width="11%"><img src="../bharti_logo.png" width="134" height="127" /></td>
+  <tr><td width="11%"><img src="bharti_logo.png" width="134" height="127" /></td>
   <td width="89%" style="color:#FFFFFF"><h1 align="center"><marquee><big><big><big><big><big>BHARTI FOUNDATION</marquee></h1></td></tr>
   </table>
 </div>
