--- a/home2.html
+++ b/home2.html
@@ -39,8 +39,8 @@ font-family:Verdana, Arial, Helvetica, sans-serif;
 <div data-role="main" class="ui-content">  
   <table width="100%">
       <tr>
-        <th scope="col"><a href="#" class="ui-btn">Register</a></th>
-        <th scope="col"><a href="#" class="ui-btn">Login</a></th>
+        <th scope="col"><a href="login.html" class="ui-btn">Register</a></th>
+        <th scope="col"><a href="reg.html" class="ui-btn">Login</a></th>
       </tr>
     </table>
 </div>
