--- a/home2.html
+++ b/home2.html
@@ -29,7 +29,7 @@ font-family:Verdana, Arial, Helvetica, sans-serif;
 <div data-role="page" id="pageone">
   <div data-role="header">
   <table width="100%" style="background:#3366CC">
-  <tr><td width="11%"><img src="bharti_logo.png" width="134" height="127" /></td>
+  <tr><td width="11%"><img src="bharti_logo.jpg" width="134" height="127" /></td>
   <td width="89%" style="color:#FFFFFF"><h1 align="center"><marquee><big><big><big><big><big>BHARTI FOUNDATION</marquee></h1></td></tr>
   </table>
 </div>
@@ -39,8 +39,8 @@ font-family:Verdana, Arial, Helvetica, sans-serif;
 <div data-role="main" class="ui-content">  
   <table width="100%">
       <tr>
-        <th scope="col"><a href="login.html" class="ui-btn">Register</a></th>
-        <th scope="col"><a href="reg.html" class="ui-btn">Login</a></th>
+        <th scope="col"><a href="#" class="ui-btn">Register</a></th>
+        <th scope="col"><a href="#" class="ui-btn">Login</a></th>
       </tr>
     </table>
 </div>
@@ -52,7 +52,7 @@ font-family:Verdana, Arial, Helvetica, sans-serif;
   <h2>&nbsp;</h2>
   <h2>&nbsp;</h2>
   <h2>&nbsp;</h2>
-  <h2>&nbsp;</h2>
+  <h2>&nbsp;</h2><br><br>
   <h2>About Bharti Foundation</h2>
   "As a first step towards fulfilling the vision of the Government and the leadership of the country, Bharti has kick-started its voluntary and affirmative action in making significant contribution to provide education to the weaker sections of the society, so as to make them employable. We need to ensure that our children and young people have access to quality education. Through Bharti Foundation we are determined to make a substantial impact in this area."<br>
 <B>Mr. Sunil Bharti Mittal,<br>
