--- a/teacher.html
+++ b/teacher.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="#FE642E">
 <font color="white">
-<form name="reg" action="code_exec.php" onsubmit="return validateForm()" method="post">
+<form  action="register_teacher.php"  method="post">
 
 <table width="274" border="0" align="center" cellpadding="2" cellspacing="0">
   <tr>
@@ -52,7 +52,7 @@
  <tr>
     
 </table>
-<input type="button" value="submit" align="center"/
+<input type="button" value="submit" align="center"/>
 </form>
 </font>
 </body>
