--- a/trainer.html
+++ b/trainer.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="#FE642E">
 <font color="white">
-<form name="reg" action="code_exec.php" onsubmit="return validateForm()" method="post">
+<form  action="register_trainer.php" method="post">
 
 <table width="274" border="0" align="center" cellpadding="2" cellspacing="0">
   <tr>
