--- a/cc1.html
+++ b/cc1.html
@@ -3,6 +3,6 @@
 <title></title>
 </head>
 <body BGCOLOR="#D0FA58">
-<a href="cc.html" target="desc">C.C</a>
+<a href="cc.html" target="desc">CLUSTER COORDINATOR</a>
 </body>
 </html>
