--- a/trainer.html
+++ b/trainer.html
@@ -1,9 +1,9 @@
 <html>
 <body bgcolor="#FE642E">
 <font color="white">
-<form  action="register_trainer.php" method="post">
+<form  action="register_trainer.php" method="POST">
 
-<table width="274" border="0" align="center" cellpadding="2" cellspacing="0">
+<table width="274" border="0" cellpadding="2" cellspacing="0">
   <tr>
   <th>TRAINER</th>
     <td colspan="2">
@@ -23,31 +23,32 @@
   </tr>
   <tr>
     <td width="95"><div align="right">Trainer_id:</div></td>
-    <td width="171"><input type="text" name="fname" /></td>
+    <td width="171"><input type="text" name="trid" /></td>
   </tr><br>
   <tr>
-    <td><div align="right">Name:</div></td>
-    <td><input type="text" name="lname" /></td>
+    <td width="95"><div align="right">Trainer_name:</div></td>
+    <td width="171"><input type="text" name="trname" /></td>
   </tr><br>
+  
   <tr>
     <td><div align="right">Location:</div></td>
-    <td><input type="text" name="mname" /></td>
+    <td><input type="text" name="location" /></td>
   </tr><br>
   <tr>
     <td><div align="right">Training_num:</div></td>
-    <td><input type="text" name="address" /></td>
+    <td><input type="text" name="trainingnum" /></td>
   </tr><br>
   <tr>
     <td><div align="right">Schools_num:</div></td>
-    <td><input type="text" name="contact" /></td>
+    <td><input type="text" name="schoolsnum" /></td>
   </tr><br>
   <tr>
     <td><div align="right">Teachers_observed</div></td>
-    <td><input type="text" name="pic" /></td>
+    <td><input type="text" name="teachersnum" /></td>
   </tr><br>
 
 </table>
-<input type="button" value="submit" align="center"/
+<input type=submit value="submit" align="center"/>
 </form>
 </font>
 </body>
