--- a/teacher.html
+++ b/teacher.html
@@ -3,7 +3,8 @@
 <font color="white">
 <form  action="register_teacher.php"  method="post">
 
-<table width="274" border="0" align="center" cellpadding="2" cellspacing="0">
+<table width="274" border="0"  cellpadding="2" cellspacing="0" >
+
   <tr>
   <th>TEACHER</th>
     <td colspan="2">
@@ -22,37 +23,42 @@
 	    </div></td>
   </tr>
   <tr>
+    <td width="95"><div align="right">Id.No:</div></td>
+    <td width="171"><input type="text" name="teacher_id" /></td>
+  </tr><br>
+  <tr>
     <td width="95"><div align="right">Name:</div></td>
-    <td width="171"><input type="text" name="fname" /></td>
+    <td width="171"><input type="text" name="teacher_name" /></td>
+  </tr><br>
+  <tr>
+    <td><div align="right">Subject Name:</div></td>
+    <td><input type="text" name="subname" /></td>
   </tr><br>
   <tr>
     <td><div align="right">School:</div></td>
-    <td><input type="text" name="lname" /></td>
+    <td><input type="text" name="school" /></td>
   </tr><br>
   <tr>
     <td><div align="right">Gender:</div></td>
-    <td><input type="text" name="mname" /></td>
+    <td><input type="text" name="gender" /></td>
   </tr><br>
-  <tr>
-    <td><div align="right">Address:</div></td>
-    <td><input type="text" name="address" /></td>
-  </tr><br>
+  
   <tr>
     <td><div align="right">Qualification:</div></td>
-    <td><input type="text" name="contact" /></td>
+    <td><input type="text" name="Qualification" /></td>
   </tr><br>
   <tr>
     <td><div align="right">experience</div></td>
-    <td><input type="text" name="pic" /></td>
+    <td><input type="text" name="exp" /></td>
   </tr><br>
  <tr>
     <td><div align="right">d.o.j</div></td>
-    <td><input type="text" name="dojo" /></td>
+    <td><input type="text" name="doj" /></td>
   </tr><br>
  <tr>
     
 </table>
-<input type="button" value="submit" align="center"/>
+<input type=submit value="submit" align="center"/>
 </form>
 </font>
 </body>
