--- a/cc.html
+++ b/cc.html
@@ -3,7 +3,7 @@
 <font color="white">
 <form  action="register_cc.php"  method="post">
 
-<table width="274" border="0" align="center" cellpadding="2" cellspacing="0">
+<table width="274" border="1"  cellpadding="2" cellspacing="0">
   <tr>
   <th>CLUSTER COORDINATOR</th>
     <td colspan="2">
