--- a/right.html
+++ b/right.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title></title>
+<meta name="author" content="Hege Refsnes">
 </head>
 <body style=" background-color:#FAAC58 ;" >
 <h1 align="center"> WELCOME to the Registration Desk!!!</h1>
