--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@ form a:hover { text-decoration: underline; }
    <p><u><b>Enter Username:<b></u></p>
 	<p><input type="text" name="username"></p>
 	<p><u><b>Enter Password:<b></u></p>
-	<p><input type="text" name="password"></p>
+	<p><input type="password" name="password"></p>
 	<input type="submit" value="login">
 </form>
 
