--- a/reg.html
+++ b/reg.html
@@ -49,7 +49,7 @@ alert(document.getElementById("contentFrame"));
 </div>
 
 <div data-role="main" class="ui-content">  
-  <iframe src='right.html' id="contentFrame" height="100%" width="100%">
+  <iframe src='right.html' id="contentFrame" height="600" width="100%">
 </div>
 
 </div> 
