--- a/cc.html
+++ b/cc.html
@@ -22,30 +22,27 @@
 	    </div></td>
   </tr>
   <tr>
-    <td width="95"><div align="right">Name:</div></td>
-    <td width="171"><input type="text" name="fname" /></td>
+    <td width="95"><div align="right">Enter your Name:</div></td>
+    <td width="171"><input type="text" name="ccname" /></td>
   </tr><br>
-  <tr>
-    <td><div align="right">Name:</div></td>
-    <td><input type="text" name="lname" /></td>
-  </tr><br>
+
   <tr>
     <td><div align="right">Cluster_id:</div></td>
-    <td><input type="text" name="mname" /></td>
+    <td><input type="text" name="ccid" /></td>
   </tr><br>
   <tr>
-    <td><div align="right">Cluster_name:</div></td>
-    <td><input type="text" name="address" /></td>
+  <td><div align="right">Enter Cluster Name:</div></td>
+    <td><input type="text" name="cname" /></td>
   </tr><br>
   <tr>
     <td><div align="right">School_num:</div></td>
-    <td><input type="text" name="contact" /></td>
+    <td><input type="text" name="schoolnum" /></td>
   </tr><br>
   
     
 </table>
 </form>
-     <input type="button" value="submit" align="center"/>
+     <input type=submit value="submit" align="center"/>
 </font>
 </body>
 </html>
